--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         }, function (res) {
             console.log(res);
         }, function (err) {
-            console.error(err);
+            console.log(err);
         });
     </script>
 </body>
