Add promise polyfill for testing.

--- a/test/web/dist.html
+++ b/test/web/dist.html
@@ -9,6 +9,7 @@
     <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine.js"></script>
     <script src="../../node_modules/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
     <script src="../../node_modules/jasmine-core/lib/jasmine-core/boot.js"></script>
+    <script src="../../node_modules/promise-polyfill/dist/polyfill.min.js"></script>
     <script src="../../dist/HttpClient.min.js"></script>
 </head>
 <body>
