Add test cases for default http method and compileURL.

--- a/test/web/dev.html
+++ b/test/web/dev.html
@@ -14,5 +14,6 @@
 </head>
 <body>
     <script src="./spec/basic.spec.js"></script>
+    <script src="./spec/defaultOptions.spec.js"></script>
 </body>
 </html>
