--- a/test/web/dist.html
+++ b/test/web/dist.html
@@ -14,5 +14,6 @@
 </head>
 <body>
     <script src="./spec/basic.spec.js"></script>
+    <script src="./spec/defaultOptions.spec.js"></script>
 </body>
 </html>
