Do not run tests in random order.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <h1>HttpClient.js</h1>
     <ul>
-        <li><a href="./test/web/dev.html">Dev Test</a></li>
-        <li><a href="./test/web/dist.html">Dist Test</a></li>
+        <li><a href="./test/web/dev.html?random=false">Dev Test</a></li>
+        <li><a href="./test/web/dist.html?random=false">Dist Test</a></li>
     </ul>
     <script src="./dist/HttpClient.js"></script>
 </body>
