Add tests for `options.method` and `options.baseURL`.

--- a/test/web/dist.html
+++ b/test/web/dist.html
@@ -13,7 +13,7 @@
     <script src="../../dist/HttpClient.min.js"></script>
 </head>
 <body>
-    <script src="./spec/basic.spec.js"></script>
-    <script src="./spec/defaultOptions.spec.js"></script>
+    <script src="./spec/options.method.spec.js"></script>
+    <script src="./spec/options.baseURL.spec.js"></script>
 </body>
 </html>
