--- a/test/web/dist.html
+++ b/test/web/dist.html
@@ -15,5 +15,6 @@
 <body>
     <script src="./spec/options.method.spec.js"></script>
     <script src="./spec/options.baseURL.spec.js"></script>
+    <script src="./spec/options.controller.spec.js"></script>
 </body>
 </html>
